public class ExternalPocket extends Pocket {
}
