public class InternalPocket extends Pocket {
}
