@startuml
abstract class Pocket {
  - content: String
  - openPocket: boolean
  + close(): void
  + isAvailable(): boolean
  + isOpenPocket(): boolean
  + open(): void
  + getContent(): String
  + save(String): void
}
class ExternalPocket
class InternalPocket

class Waistcoat {
  - pockets: Pocket[]
  + POCKETS_AMOUNT: int
  - openWaistcoat: boolean
  - isValidPocketNumber(int): boolean
  - isOpenWaistcoat(): String
  + close(): void
  + openPocket(int): void
  + getPocketsContent(): String
  + toString(): String
  + save(int, String): void
  + open(): void
}

Waistcoat -->"1..*" Pocket

ExternalPocket  --|>  Pocket
InternalPocket  --|>  Pocket
@enduml